# DAMCREM

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
app/1/: app_data.txt  app_exec_time_data.txt  app_exec_time_data_dummy.txt  app_exec_time_result.txt
app/2/: app_data.txt  app_exec_time_data.txt
example/client/: CMakeLists.txt  test_online.cpp
example/server/: CMakeLists.txt  offline_evaluation.cpp  simulation_evaluation.cpp  test_online.cpp  test_server.cpp
exec/deim2021/: get_result.py  get_result.sh  make_graph.py  run.sh
misc/: gen_const_data_1-0.sh  gen_const_data_1-1000000.sh  gen_const_data_1-1000000000.sh  gen_const_data_2-1000000.sh  received_time_M4096_mu10000_0.txt  rmBufferFile.sh
options/1app/: 1-demo.txt  1-static_analysis.txt  1-test.txt
options/deim2021/: gen.sh  template.txt
src/: CMakeLists.txt  computational_resource.h  dir_path_config.cpp  dir_path_config.h  emt.h  executor.cpp  executor.h  file_path_config.h  job.cpp  job.h  macrotask_queue.cpp  macrotask_queue.h  operand_data.h  operation.h  option.cpp  option.h  query.cpp  query.h  query_receiver.cpp  query_receiver.h  result_printer.cpp  result_printer.h  result_sender.cpp  result_sender.h  scheme.h  scheme_info.h  scheme_list.cpp  scheme_list.h  server_info.h  time_manager.h  time_manager_simulator.h  util.h  wmt.h
src/allocate_method/: bits2020.cpp  dummy.cpp  max_parallel.cpp  minimum.cpp  single.cpp
src/application/: application.h  application_list.h  macrotask.h  macrotask_exec_time_info.cpp  macrotask_exec_time_info.h  macrotask_exec_time_info_manager.cpp  macrotask_exec_time_info_manager.h  macrotask_graph.cpp  macrotask_graph.h  operand_data_const.h
src/communication/: data.h  shared_info.h  stdsc_all.h
src/communication/client/: client.cpp  client.h
src/communication/data/: delete_data_c2s.h  new_client_id_c2s.h  new_client_id_s2c.h  query_c2s.h  result_c2s.h  result_s2c.h  update_const_data_c2s.h  update_scheme_c2s.h
src/communication/server/: callback_function.cpp  callback_function.h  offline_server.cpp  offline_server.h  server.cpp  server.h  server_callback_param.h  state.cpp  state.h
src/schedule_method/: deadline.cpp  deadline_deadline.cpp  deadline_fifo.cpp  dummy.cpp  fifo.cpp  fifo_deadline.cpp  fifo_fifo.cpp
src/scheme/: dummy.h
src/scheme_info/: dummy.h
src/util/: algorithm.h  alias.h  debug_message.h  random.h  stream.h  string.h  time.h
tool/: CMakeLists.txt  gen_data.cpp  generate_app_data_template.sh  offline_job_info_generator.py  static_analysis.cpp
